log/build_2024-03-06_13-29-58/drone_controller_vrep/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/zain/Projects/MasterThesis/install/drone_controller_vrep/lib/python3.10/site-packages/drone_controller_vrep/drone_feedback_controller.py", line 2
    from rclpy.node import Node, 
                                 ^
SyntaxError: trailing comma not allowed without surrounding parentheses

